--- a/.env
+++ b/.env
@@ -1,10 +1,7 @@
-// Esse .env é um arquivo que contém as variáveis de ambiente do projeto, 
-// como por exemplo as credenciais do banco de dados, a porta que o servidor irá rodar, etc.
-// Se encontra no repositorio pois serve de exemplo para o desenvolvimento do projeto com intuito educacional.
 
 DB_USER=postgres
 DB_HOST=localhost
-DB_NAME=harrypotter
-DB_PASSWORD=ds564
+DB_NAME=spadium
+DB_PASSWORD=Junior07
 DB_PORT=5432
 PORT=3003
